fix map and search results sidebar overlapping display

--- a/app/assets/stylesheets/search-index.scss
+++ b/app/assets/stylesheets/search-index.scss
@@ -16,6 +16,8 @@
   border-bottom: 2px solid rgb(99, 96, 117);
 }
 
+#search { width: 33%; }
+
 .mapboxgl-popup {
   max-width: 600px;
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -48,7 +50,6 @@
   margin: 5px;
   z-index: 1;
   width: 180px;
-  border: 1px solid rgb(78, 70, 78);
 }
 
 .filter-ctrl input[type=text] {
@@ -59,7 +60,8 @@
   margin: 0;
   color: rgba(0, 0, 0, 1);
   padding: 5px;
-  border-radius: 0px;
+  border-radius: 4px;
+  border: 1.3px solid darkgray;
 }
 
 .filter-options {
@@ -77,7 +79,7 @@
   align-items: center;
   justify-content: center;
   height: 55px;
-  width: 33%;
+  width: 100%;
   background-color: rgba(171, 191, 183, 1);
   padding-bottom: 10px;
   padding-top: 10px;
@@ -93,7 +95,7 @@
 
 .search-results-container {
   height: 520px;
-  width: 31.6%;
+  with: 100%;
   background-color: rgb(135, 158, 150);
   overflow: scroll;
   border-bottom: 2px solid rgb(99, 96, 117);
