--- a/app/assets/stylesheets/stations-index.scss
+++ b/app/assets/stylesheets/stations-index.scss
@@ -57,6 +57,9 @@
     border: 3px solid gray;
     border-collapse: separate;
     border-spacing: 0;
+    margin-right: 150px;
+    margin-left: 150px;
+    thead, td { color: darkslategrey; }
   }
   a {
     color: rgb(60, 79, 130);
