--- a/app/assets/stylesheets/user-show.scss
+++ b/app/assets/stylesheets/user-show.scss
@@ -46,10 +46,10 @@
   width: 240px;
   display: flex;
   flex-direction: column;
-  background-color: rgba(134, 172, 150, 0.5);
+  background-color: rgba(108, 158, 155, 0.40);
   padding: 10px;
   margin-top: 1.5em;
-  border: gray 3.5px solid;
+  border: lightgray 3.5px solid;
 }
 
 .project-details:hover {
